force-app/main/default/objects/ARF_Tier__c/ARF_Tier__c.object-meta.xml
<CustomObject>
    <label>ARF Tier</label>
    <nameField>
        <label>ARF Tier Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ARF Tiers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>