force-app/main/default/objects/ARF_Tier__c/fields/Increment__c.field-meta.xml
<CustomField>
    <fullName>Increment__c</fullName>
    <label>Increment</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>