force-app/main/default/objects/ARF_Tier__c/fields/Max_Value__c.field-meta.xml
<CustomField>
    <fullName>Max_Value__c</fullName>
    <label>Max Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>