force-app/main/default/objects/ARF_Tier__c/fields/Tier_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Tier_Percentage__c</fullName>
    <label>Tier Percentage</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>